# logica_sql

./: CMakeLists.txt  log_msg.cpp  log_msg.hpp  main.cpp  sql_handling.cpp  sql_handling.hpp
